# tuna-gpu

./: Cargo.toml
resources/: add.ptx  sha256.h  sha256_80.cu  sha256_gpu.cu  sha256_gpu.ptx  utils.h
src/: main.rs  sha256_opencl.cl
