[package]
name = "tuna_gpu_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"
cardano-multiplatform-lib = "3.1.3"
digest = "0.10.7"
hex = "0.4.3"
rand = "0.8.5"
regex = "1.9.4"
reqwest = { version = "0.11.20", features=["blocking", "json"]}
serde = "1.0.188"
sha2 = "0.10.7"
sha256 = "1.4.0"
opencl3 = "0.9.3"
ocl = "0.19.4"
once_cell = "1.18.0"